<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <RelativeLayout
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/art_gallery_desc"
            android:src="@drawable/ic_logo_agc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="39.1dp"
                android:contentDescription="@string/person_desc"
                android:src="@drawable/ic_person" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="37.1dp"
                android:contentDescription="@string/plus_desc"
                android:src="@drawable/ic_plus" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/menu_desc"
                android:src="@drawable/ic_menu" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_profile"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/upload"
                android:src="@drawable/ic_upload" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_condensed_light"
                android:text="@string/upload"
                android:textColor="@color/cornflowerBlue"
                android:textSize="14sp"
                app:lineHeight="24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="127dp"
                android:layout_height="127dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/face" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_condensed_extra_light"
                android:text="@string/john_doe"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:layout_marginTop="7dp"
                app:lineHeight="28dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_condensed_light"
                android:text="@string/edit"
                android:textColor="@color/cornflowerBlue"
                android:textSize="14sp"
                app:lineHeight="24dp" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_user_profile">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="113dp"
            android:layout_height="24dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:gravity="center"
            android:text="@string/my_dashboard"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:lineHeight="24dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:layout_centerInParent="true"
            app:trackTint="@color/midGreen"
            android:clickable="false"
            app:thumbTint="@color/line_gray"
            />

    </RelativeLayout>

    <View
        android:id="@+id/gray_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="23dp"
        android:background="@color/line_gray"
        app:layout_constraintTop_toBottomOf="@id/rl_dashboard" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="17.8dp"
        android:layout_marginEnd="17.2dp"
        android:contentDescription="@string/color_palette"
        android:scaleType="fitXY"
        android:src="@drawable/color_rectangle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>